fixed horizontal scroll/click; added metadata; minor style changes; minor updates

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -34,9 +34,9 @@
       transition: color 300ms
       color: rgb(85, 85, 85)
       &.active
-        color: red
+        color: #7f7f7f
       &:not(.active):hover
-        color: #9a9a9a
+        color: #7f7f7f
   .content-wrapper
     +medium-devices
       min-width: 40vw
