--- a/resources/css/information.sass
+++ b/resources/css/information.sass
@@ -20,3 +20,7 @@
     max-height: 60vh
     overflow: hidden
     position: relative
+  .info
+    text-align: center
+    +medium-devices
+      text-align: left
